MOZ_CRASH(IPC message size is too large) when capturing a profile
Categories
(Core :: Gecko Profiler, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox104 | --- | fixed |
People
(Reporter: mozbugz, Assigned: mozbugz)
References
(Blocks 2 open bugs)
Details
Crash Data
Attachments
(2 files)
Found in this Try: https://treeherder.mozilla.org/jobs?repo=try&revision=c6389bc85015b9d8f90c9adb481860681bde4cd7&selectedTaskRun=R4kJqij0SCS53bV-ZStZOw.0
This was when a child process sent its profile to the parent.
IPC messages are limited to 256MiB: https://searchfox.org/mozilla-central/rev/0d7e190891e62276cf934cc0b96b22e8e086ddb9/ipc/chromium/src/chrome/common/ipc_channel.h#85
| Assignee | ||
Comment 1•3 years ago
|
||
Instead of trying to send a too-big message, send a short message starting
with '*', which the parent can put into the profileGatheringLog.
Depends on D152026
Updated•3 years ago
|
| Assignee | ||
Comment 2•3 years ago
|
||
Instead of trying to create a too-big shmem, or if the shmem creation fails,
send a short message starting with '*', which the parent can put into the
profileGatheringLog.
Depends on D152027
Comment 4•3 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/a58be620f788
https://hg.mozilla.org/mozilla-central/rev/70cacc19a882
| Assignee | ||
Comment 6•3 years ago
|
||
Copying crash signatures from duplicate bugs.
Description
•