Bug 1779367 - Don't send shutdown profiles that don't fit in an IPC message - r=florian

Instead of trying to send a too-big message, send a short message starting
with '*', which the parent can put into the profileGatheringLog.

Note: The `CollectProfileOrEmptyString` is now only used by GrabShutdownProfile
(it was previously also used by RecvGatherProfile before it went async). Since
this patch is completely changing its implementation, we may as well fold it
back into its only caller.

Differential Revision: https://phabricator.services.mozilla.com/D152027